[tool.poetry]
name = "langton-ant"
version = "0.1.0"
description = ""
authors = ["Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>"]
readme = "README.md"
packages = [{include = "langton_ant"}]

[tool.poetry.dependencies]
python = "^3.11"
pyxel = "^1.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
